force-app/main/default/objects/SalesforceCase__x/fields/Cas_SendPaperlessCodeModeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_SendPaperlessCodeModeC__c</fullName>
    <description>Cas_SendPaperlessCodeModeC</description>
    <externalDeveloperName>Cas_SendPaperlessCodeModeC</externalDeveloperName>
    <label>Cas_SendPaperlessCodeModeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>