force-app/main/default/objects/SalesforceCase__x/fields/Cas_ServiceEnergyC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ServiceEnergyC__c</fullName>
    <description>Cas_ServiceEnergyC</description>
    <externalDeveloperName>Cas_ServiceEnergyC</externalDeveloperName>
    <label>Cas_ServiceEnergyC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>