force-app/main/default/objects/SalesforceCase__x/fields/Cas_ServicePointTypeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ServicePointTypeC__c</fullName>
    <description>Cas_ServicePointTypeC</description>
    <externalDeveloperName>Cas_ServicePointTypeC</externalDeveloperName>
    <label>Cas_ServicePointTypeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>