force-app/main/default/objects/SalesforceCase__x/fields/Cas_SiebelAttributeDataC__c.field-meta.xml
<CustomField>
    <fullName>Cas_SiebelAttributeDataC__c</fullName>
    <description>Cas_SiebelAttributeDataC</description>
    <externalDeveloperName>Cas_SiebelAttributeDataC</externalDeveloperName>
    <label>Attributi Siebel</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>