force-app/main/default/objects/SalesforceCase__x/fields/Cas_SignalCategoryC__c.field-meta.xml
<CustomField>
    <fullName>Cas_SignalCategoryC__c</fullName>
    <description>Cas_SignalCategoryC</description>
    <externalDeveloperName>Cas_SignalCategoryC</externalDeveloperName>
    <label>Cas_SignalCategoryC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>