force-app/main/default/objects/SalesforceCase__x/fields/Cas_SignalSubCategoryC__c.field-meta.xml
<CustomField>
    <fullName>Cas_SignalSubCategoryC__c</fullName>
    <description>Cas_SignalSubCategoryC</description>
    <externalDeveloperName>Cas_SignalSubCategoryC</externalDeveloperName>
    <label>Sottocategoria segnalazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>