force-app/main/default/objects/SalesforceCase__x/fields/Cas_SignalTypeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_SignalTypeC__c</fullName>
    <description>Cas_SignalTypeC</description>
    <externalDeveloperName>Cas_SignalTypeC</externalDeveloperName>
    <label>Tipo Segnalazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>