force-app/main/default/objects/SalesforceCase__x/fields/Cas_SoldByC__c.field-meta.xml
<CustomField>
    <fullName>Cas_SoldByC__c</fullName>
    <description>Cas_SoldByC</description>
    <externalDeveloperName>Cas_SoldByC</externalDeveloperName>
    <label>Venduto Da</label>
    <length>255</length>
    <type>Text</type>
</CustomField>