force-app/main/default/objects/SalesforceCase__x/fields/Cas_StartAppointmentC__c.field-meta.xml
<CustomField>
    <fullName>Cas_StartAppointmentC__c</fullName>
    <description>Cas_StartAppointmentC</description>
    <externalDeveloperName>Cas_StartAppointmentC</externalDeveloperName>
    <label>Inizio Appuntamento</label>
    <type>DateTime</type>
</CustomField>