force-app/main/default/objects/SalesforceCase__x/fields/Cas_SubprocessC__c.field-meta.xml
<CustomField>
    <fullName>Cas_SubprocessC__c</fullName>
    <description>Cas_SubprocessC</description>
    <externalDeveloperName>Cas_SubprocessC</externalDeveloperName>
    <label>Sottoprocesso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>