force-app/main/default/objects/SalesforceCase__x/fields/Cas_SubscriberTypeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_SubscriberTypeC__c</fullName>
    <description>Cas_SubscriberTypeC</description>
    <externalDeveloperName>Cas_SubscriberTypeC</externalDeveloperName>
    <label>Cas_SubscriberTypeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>