force-app/main/default/objects/SalesforceCase__x/fields/Cas_SupplyAddressC__c.field-meta.xml
<CustomField>
    <fullName>Cas_SupplyAddressC__c</fullName>
    <description>Cas_SupplyAddressC</description>
    <externalDeveloperName>Cas_SupplyAddressC</externalDeveloperName>
    <label>Indirizzo [Fornitura]</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>