force-app/main/default/objects/SalesforceCase__x/fields/Cas_SupplyPlaceCodeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_SupplyPlaceCodeC__c</fullName>
    <description>Cas_SupplyPlaceCodeC</description>
    <externalDeveloperName>Cas_SupplyPlaceCodeC</externalDeveloperName>
    <label>Cas_SupplyPlaceCodeC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>