force-app/main/default/objects/SalesforceCase__x/fields/Cas_SwitchOutDateC__c.field-meta.xml
<CustomField>
    <fullName>Cas_SwitchOutDateC__c</fullName>
    <description>Cas_SwitchOutDateC</description>
    <externalDeveloperName>Cas_SwitchOutDateC</externalDeveloperName>
    <label>Cas_SwitchOutDateC</label>
    <type>DateTime</type>
</CustomField>