force-app/main/default/objects/SalesforceCase__x/fields/Cas_TaxesC__c.field-meta.xml
<CustomField>
    <fullName>Cas_TaxesC__c</fullName>
    <description>Cas_TaxesC</description>
    <externalDeveloperName>Cas_TaxesC</externalDeveloperName>
    <label>Cas_TaxesC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>