force-app/main/default/objects/SalesforceCase__x/fields/Cas_TechnicalDataRequestTypeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_TechnicalDataRequestTypeC__c</fullName>
    <description>Cas_TechnicalDataRequestTypeC</description>
    <externalDeveloperName>Cas_TechnicalDataRequestTypeC</externalDeveloperName>
    <label>Tipo Richiesta Dati Tecnici</label>
    <length>255</length>
    <type>Text</type>
</CustomField>