force-app/main/default/objects/SalesforceCase__x/fields/Cas_TechnicalFeasibilityC__c.field-meta.xml
<CustomField>
    <fullName>Cas_TechnicalFeasibilityC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_TechnicalFeasibilityC</description>
    <externalDeveloperName>Cas_TechnicalFeasibilityC</externalDeveloperName>
    <label>Fattibilita tecnica</label>
    <type>Checkbox</type>
</CustomField>