force-app/main/default/objects/SalesforceCase__x/fields/Cas_TecnicalPhaseC__c.field-meta.xml
<CustomField>
    <fullName>Cas_TecnicalPhaseC__c</fullName>
    <description>Cas_TecnicalPhaseC</description>
    <externalDeveloperName>Cas_TecnicalPhaseC</externalDeveloperName>
    <label>Cas_TecnicalPhaseC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>