force-app/main/default/objects/SalesforceCase__x/fields/Cas_TemporaryConnectionStartDateC__c.field-meta.xml
<CustomField>
    <fullName>Cas_TemporaryConnectionStartDateC__c</fullName>
    <description>Cas_TemporaryConnectionStartDateC</description>
    <externalDeveloperName>Cas_TemporaryConnectionStartDateC</externalDeveloperName>
    <label>data inizio connessione temporanea</label>
    <type>DateTime</type>
</CustomField>