force-app/main/default/objects/SalesforceCase__x/fields/Cas_TerminationDateC__c.field-meta.xml
<CustomField>
    <fullName>Cas_TerminationDateC__c</fullName>
    <description>Cas_TerminationDateC</description>
    <externalDeveloperName>Cas_TerminationDateC</externalDeveloperName>
    <label>Cas_TerminationDateC</label>
    <type>DateTime</type>
</CustomField>