force-app/main/default/objects/SalesforceCase__x/fields/Cas_TotalCoverC__c.field-meta.xml
<CustomField>
    <fullName>Cas_TotalCoverC__c</fullName>
    <description>Cas_TotalCoverC</description>
    <externalDeveloperName>Cas_TotalCoverC</externalDeveloperName>
    <label>Cas_TotalCoverC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>