force-app/main/default/objects/SalesforceCase__x/fields/Cas_TotalPaidCustomerC__c.field-meta.xml
<CustomField>
    <fullName>Cas_TotalPaidCustomerC__c</fullName>
    <description>Cas_TotalPaidCustomerC</description>
    <externalDeveloperName>Cas_TotalPaidCustomerC</externalDeveloperName>
    <label>Cas_TotalPaidCustomerC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>