force-app/main/default/objects/SalesforceCase__x/fields/Cas_TotalPaidCustomerToPayC__c.field-meta.xml
<CustomField>
    <fullName>Cas_TotalPaidCustomerToPayC__c</fullName>
    <description>Cas_TotalPaidCustomerToPayC</description>
    <externalDeveloperName>Cas_TotalPaidCustomerToPayC</externalDeveloperName>
    <label>Totale Pagato Cliente - Totale Da Pagare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>