force-app/main/default/objects/SalesforceCase__x/fields/Cas_TotalRefundC__c.field-meta.xml
<CustomField>
    <fullName>Cas_TotalRefundC__c</fullName>
    <description>Cas_TotalRefundC</description>
    <externalDeveloperName>Cas_TotalRefundC</externalDeveloperName>
    <label>Cas_TotalRefundC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>