force-app/main/default/objects/SalesforceCase__x/fields/Cas_TotalResidueC__c.field-meta.xml
<CustomField>
    <fullName>Cas_TotalResidueC__c</fullName>
    <description>Cas_TotalResidueC</description>
    <externalDeveloperName>Cas_TotalResidueC</externalDeveloperName>
    <label>Cas_TotalResidueC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>