force-app/main/default/objects/SalesforceCase__x/fields/Cas_UseCategoryC__c.field-meta.xml
<CustomField>
    <fullName>Cas_UseCategoryC__c</fullName>
    <description>Cas_UseCategoryC</description>
    <externalDeveloperName>Cas_UseCategoryC</externalDeveloperName>
    <label>Cas_UseCategoryC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>