force-app/main/default/objects/SalesforceCase__x/fields/Cas_UserRequestC__c.field-meta.xml
<CustomField>
    <fullName>Cas_UserRequestC__c</fullName>
    <description>Cas_UserRequestC</description>
    <externalDeveloperName>Cas_UserRequestC</externalDeveloperName>
    <label>Richiesta Utente</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>