force-app/main/default/objects/SalesforceCase__x/fields/Cas_VasPolicyNumberC__c.field-meta.xml
<CustomField>
    <fullName>Cas_VasPolicyNumberC__c</fullName>
    <description>Cas_VasPolicyNumberC</description>
    <externalDeveloperName>Cas_VasPolicyNumberC</externalDeveloperName>
    <label>Cas_VasPolicyNumberC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>