force-app/main/default/objects/SalesforceCase__x/fields/Cas_VasPracticeCodeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_VasPracticeCodeC__c</fullName>
    <description>Cas_VasPracticeCodeC</description>
    <externalDeveloperName>Cas_VasPracticeCodeC</externalDeveloperName>
    <label>Codice Pratica VAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>