force-app/main/default/objects/SalesforceCase__x/fields/Cas_VasServiceActivationDateC__c.field-meta.xml
<CustomField>
    <fullName>Cas_VasServiceActivationDateC__c</fullName>
    <description>Cas_VasServiceActivationDateC</description>
    <externalDeveloperName>Cas_VasServiceActivationDateC</externalDeveloperName>
    <label>Data attivazione servizio VAS</label>
    <type>DateTime</type>
</CustomField>