force-app/main/default/objects/SalesforceCase__x/fields/Cas_VasStatusC__c.field-meta.xml
<CustomField>
    <fullName>Cas_VasStatusC__c</fullName>
    <description>Cas_VasStatusC</description>
    <externalDeveloperName>Cas_VasStatusC</externalDeveloperName>
    <label>Stato VAS </label>
    <length>255</length>
    <type>Text</type>
</CustomField>