force-app/main/default/objects/SalesforceCase__x/fields/Cas_VasSupplierStatusC__c.field-meta.xml
<CustomField>
    <fullName>Cas_VasSupplierStatusC__c</fullName>
    <description>Cas_VasSupplierStatusC</description>
    <externalDeveloperName>Cas_VasSupplierStatusC</externalDeveloperName>
    <label>Cas_VasSupplierStatusC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>