force-app/main/default/objects/SalesforceCase__x/fields/Cas_VatConcessionC__c.field-meta.xml
<CustomField>
    <fullName>Cas_VatConcessionC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_VatConcessionC</description>
    <externalDeveloperName>Cas_VatConcessionC</externalDeveloperName>
    <label>Cas_VatConcessionC</label>
    <type>Checkbox</type>
</CustomField>