force-app/main/default/objects/SalesforceCase__x/fields/Cas_VatNumberC__c.field-meta.xml
<CustomField>
    <fullName>Cas_VatNumberC__c</fullName>
    <description>Cas_VatNumberC</description>
    <externalDeveloperName>Cas_VatNumberC</externalDeveloperName>
    <label>Cas_VatNumberC</label>
    <length>11</length>
    <type>Text</type>
</CustomField>