force-app/main/default/objects/SalesforceCase__x/fields/Cas_VATPercentageC__c.field-meta.xml
<CustomField>
    <fullName>Cas_VATPercentageC__c</fullName>
    <description>Cas_VATPercentageC</description>
    <externalDeveloperName>Cas_VATPercentageC</externalDeveloperName>
    <label>Cas_VATPercentageC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>