force-app/main/default/objects/SalesforceCase__x/fields/Cas_WrittenReceiptRequestDateC__c.field-meta.xml
<CustomField>
    <fullName>Cas_WrittenReceiptRequestDateC__c</fullName>
    <description>Cas_WrittenReceiptRequestDateC</description>
    <externalDeveloperName>Cas_WrittenReceiptRequestDateC</externalDeveloperName>
    <label>Data Ricezione Richiesta</label>
    <type>DateTime</type>
</CustomField>