force-app/main/default/objects/SalesforceCase__x/fields/Cas_YearManufactureMeterC__c.field-meta.xml
<CustomField>
    <fullName>Cas_YearManufactureMeterC__c</fullName>
    <description>Cas_YearManufactureMeterC</description>
    <externalDeveloperName>Cas_YearManufactureMeterC</externalDeveloperName>
    <label>Anno di fabbricazione del Contatore</label>
    <type>DateTime</type>
</CustomField>