force-app/main/default/objects/SalesforceCase__x/fields/ClienteSalesforce__c.field-meta.xml
<CustomField>
    <fullName>ClienteSalesforce__c</fullName>
    <externalDeveloperName>Cas_AccountId</externalDeveloperName>
    <label>Cliente Salesforce</label>
    <length>18</length>
    <referenceTo>SalesforceCustomer__x</referenceTo>
    <relationshipLabel>Casi Salesforce</relationshipLabel>
    <relationshipName>CasiSalesforce</relationshipName>
    <type>ExternalLookup</type>
</CustomField>