force-app/main/default/objects/SalesforceCase__x/fields/Dis_Name__c.field-meta.xml
<CustomField>
    <fullName>Dis_Name__c</fullName>
    <description>Dis_Name</description>
    <externalDeveloperName>Dis_Name</externalDeveloperName>
    <label>Dis_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>