force-app/main/default/objects/SalesforceCase__x/fields/Int_Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Int_Lead_Name__c</fullName>
    <description>Int_Lead_Name</description>
    <externalDeveloperName>Int_Lead_Name</externalDeveloperName>
    <label>Int_Lead_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>