force-app/main/default/objects/SalesforceCase__x/fields/Int_SubjectEmailC__c.field-meta.xml
<CustomField>
    <fullName>Int_SubjectEmailC__c</fullName>
    <description>Int_SubjectEmailC</description>
    <externalDeveloperName>Int_SubjectEmailC</externalDeveloperName>
    <label>Int_SubjectEmailC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>